--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <string name="app_name">UEB PREP</string>
     <string name="questions">a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,and,away,big,blue,can,come,down,find,for,funny,go,help,here,I,in,is,jump,little,look,make,me,my,not,one,play,red,run,said,see,the,three,to,two,up,we,where,yellow,you</string>
     <integer name="questionID">1</integer>
@@ -8,4 +7,5 @@
     <integer name="cancelID">4</integer>
     <integer name="resultID">5</integer>
     <integer name="scoreTxtID">6</integer>
+    <integer name="scoreID">7</integer>
 </resources>
